Rebaselined developer branch front end care connect